--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,8 @@ dependencies:
 
   flutter_vibrate: ^1.3.0
   process: ^5.0.2
-  flutter_ffmpeg: ^0.4.0
+#  flutter_ffmpeg: ^0.4.0
+  ffmpeg_kit_flutter: ^5.1.0
   media_kit: ^1.1.10                             # Primary package.
   media_kit_video: ^1.2.4                        # For video rendering.
   media_kit_libs_video: ^1.0.4
